# ghateh-iran-image-processor

./: .editorconfig  .gitignore  README.md
.github/workflows/: backend-quality.yml
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_empty_baseline.py
backend/src/ghateh_processor/: __init__.py
backend/src/ghateh_processor/api/: __init__.py  system.py
backend/src/ghateh_processor/bootstrap/: __init__.py  api.py  database_connectivity.py  database_lifespan.py  database_runtime.py  database_settings.py  server.py  settings.py
backend/tests/contract/: test_system_api.py
backend/tests/integration/: test_postgresql_migration_cycle.py  test_postgresql_runtime_connectivity.py
backend/tests/unit/: test_database_configuration.py  test_database_connectivity.py  test_database_lifespan.py  test_database_runtime.py  test_migration_harness.py  test_package_import.py  test_runtime_configuration.py
docs/adr/: 0001-modular-monolith.md  0002-postgresql-as-source-of-truth.md  0003-redis-and-celery.md  0004-local-storage-abstraction.md  0005-rest-api.md  0006-non-generative-main-pipeline.md  0007-human-review-before-final-export.md  0008-birefnet-primary-rembg-fallback.md  0009-server-side-session-authentication.md  0010-export-lifecycle-separated-from-image-lifecycle.md
docs/architecture/: accepted-domain-fact-semantics.md  api-design.md  core-domain-ownership-rules.md  current-source-availability-semantics.md  database-design.md  deployment.md  domain-model.md  durable-business-fact-classification-rules.md  git-branch-and-commit-standards.md  (+16 more)
(+10 files in other folders)
